# kindergarden

./: CMakeLists.txt  base_opengl.c  main.c
res/: Human.c  Human.h
util/: Vectors.c  Vectors.h
